--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
       <header>
         <img src="./tinder-logo.webp" alt="Tinder Logo" />
       </header>
-      <div class="cards"></div>
-      <footer></footer>
+      <div class="cards">
+        <article>
+          <img
+            src="./images/2.webp"
+            alt="Alex, brown hair main, 25 years old"
+          />
+          <h2>Alex <span>25</span></h2>
+          <div class="choice nope">NOPE</div>
+          <div class="choice like">LIKE</div>
+        </article>
+
+        <article>
+          <img src="./images/1.webp" alt="Leila, red hair girl, 27 years old" />
+          <h2>Leila <span>27</span></h2>
+          <div class="choice nope">NOPE</div>
+          <div class="choice like">LIKE</div>
+        </article>
+      </div>
+      <footer>
+        <button class="is-refresh" aria-label="undo"></button>
+        <button class="is-remove is-big" aria-label="remove"></button>
+        <button class="is-star" aria-label="star"></button>
+        <button class="is-fav is-big" aria-label="fav"></button>
+        <button class="is-zap" aria-label="zap"></button>
+      </footer>
     </section>
   </main>
 </body>
@@ -30,7 +53,7 @@
     min-height: 100vh;
     overflow: hidden;
     user-select: none;
-    background: #f0f0f0;
+    background: #e5e5e5;
   }
 
   main {
@@ -47,10 +70,82 @@
     width: 100%;
     border-radius: 32px;
     display: flex;
+    gap: 24px;
     flex-direction: column;
     overflow: hidden;
     position: relative;
     padding: 16px 6px;
     margin: 24px;
+  }
+
+  header {
+    display: flex;
+    justify-content: center;
+  }
+
+  header img {
+    width: 24px;
+    height: 24px;
+  }
+
+  footer {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 12px;
+    padding: 0 24px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  footer button {
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+  }
+
+  .cards {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+  }
+
+  .cards article {
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    cursor: grab;
+    overflow: hidden;
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    will-change: transform rotate;
+  }
+
+  .cards article img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .cards article h2 {
+    color: white;
+    position: absolute;
+    inset: 0;
+    display: flex;
+    align-items: flex-end;
+    height: 100%;
+    width: 100%;
+    padding: 16px;
+    z-index: 3;
+    background: linear-gradient(to top, #00000088 20%, transparent 40%);
+  }
+  .cards article span {
+    margin-left: 8px;
+    font-size: 18px;
+    line-height: 1.4;
+    font-weight: 400;
   }
 </style>
