Adding the last buttons

--- a/index.html
+++ b/index.html
@@ -123,8 +123,16 @@
     background-position: -140px;
   }
 
-  footer button.is-undo {
-    background-position: -140px 0;
+  footer button.is-remove {
+    background-position: -150px 0;
+  }
+
+  footer button.is-star {
+    background-position: -70px 0;
+  }
+
+  footer button.is-fav {
+    background-position: -50px 0;
   }
 
   .cards {
