--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
           <div class="choice nope">NOPE</div>
           <div class="choice like">LIKE</div>
         </article>
+        <span>
+          No hay más personas cerca de ti...<br />
+          Vuelve a intentarlo más tarde
+        </span>
       </div>
       <footer>
         <button class="is-undo" aria-label="undo"></button>
@@ -142,6 +146,16 @@
     margin: 0 auto;
   }
 
+  .cards span {
+    display: grid;
+    place-content: center;
+    color: #777;
+    font-size: 14px;
+    text-align: center;
+    height: 100%;
+    z-index: -1;
+  }
+
   .cards article {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -152,7 +166,11 @@
     width: 100%;
     height: 100%;
     z-index: 2;
-    will-change: transform rotate;
+  }
+
+  .cards article.reset {
+    transition: transform 0.3s ease;
+    transform: translateX(0) !important;
   }
 
   .cards article img {
@@ -179,48 +197,151 @@
     line-height: 1.4;
     font-weight: 400;
   }
+  .cards article .choice {
+    border-radius: 8px;
+    color: black;
+    border: 4px solid;
+    z-index: 9999;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    opacity: 0;
+    padding: 4px 8px;
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    width: fit-content;
+  }
+
+  .cards article .choice.nope {
+    border-color: #ff6e63;
+    color: #ff6e63;
+    transform: rotate(30deg);
+  }
+
+  .cards article .choice.like {
+    border-color: #63ff68;
+    color: #63ff68;
+    left: 16px;
+    transform: rotate(-30deg);
+  }
+
+  .cards article.go-left {
+    transform: translateX(-150%) rotate(-30deg) !important;
+  }
+
+  .cards article.go-right {
+    transform: translateX(150%) rotate(30deg) !important;
+  }
+
+  .cards article.go-left {
+    transition: transform 0.3s ease, rotate 0.3s ease;
+  }
+  .cards article.go-right {
+    transition: transform 0.3s ease, rotate 0.3s ease;
+  }
 </style>
 
 <script>
-  let isAnimating = false;
-  let pullDeltaX = 0; //distancia que la card se esta arrastrando
+  const DECISION_THRESHOLD = 75;
 
-  const startDrag = (event) => {
+  let isAnimating = false;
+  let pullDeltaX = 0; // distance from the card being dragged
+
+  function startDrag(event) {
     if (isAnimating) return;
 
-    //get the first article element
-    const currentCard = event.target.closest("article");
+    // get the first article element
+    const actualCard = event.target.closest("article");
     if (!actualCard) return;
 
-    //get initial position of mouse of finger
+    // get initial position of mouse or finger
     const startX = event.pageX ?? event.touches[0].pageX;
 
-    //listen the mouse and touch movemenets
-    document.addEventListener("mousedown", onMove);
+    // listen the mouse and touch movements
+    document.addEventListener("mousemove", onMove);
     document.addEventListener("mouseup", onEnd);
 
     document.addEventListener("touchmove", onMove, { passive: true });
     document.addEventListener("touchend", onEnd, { passive: true });
 
-    const onMove = (event) => {
-      //current position of mouse or finger
+    function onMove(event) {
+      // current position of mouse or finger
       const currentX = event.pageX ?? event.touches[0].pageX;
-      //the distance between the initial and current position
-      pullDeltaX = currentX - startX;
-      //No distance traveled
-      if (pullDeltaX === 0) return;
-      //Change the flag to indicate we are animating
-      isAnimating = true;
-      //Calculate the rotation of the card using the distance
-      const deg = pullDeltaX / 10;
-      //Apply the transformation to the card
-      currentCard.style.transform = `translateX(${pullDeltaX}px) rotate(${deg}deg)`;
-      //Change the cursor to grabbing
-      currentCard.style.cursor = "grabbing";
-    };
 
-    function onEnd(event) {}
-  };
+      // the distance between the initial and current position
+      pullDeltaX = currentX - startX;
+
+      // there is no distance traveled in X axis
+      if (pullDeltaX === 0) return;
+
+      // change the flag to indicate we are animating
+      isAnimating = true;
+
+      // calculate the rotation of the card using the distance
+      const deg = pullDeltaX / 15;
+
+      // apply the transformation to the card
+      actualCard.style.transform = `translateX(${pullDeltaX}px) rotate(${deg}deg)`;
+
+      // change the cursor to grabbing
+      actualCard.style.cursor = "grabbing";
+
+      // change opacity of the choice info
+      const opacity = Math.abs(pullDeltaX) / 100;
+      const isRight = pullDeltaX > 0;
+
+      const choiceEl = isRight
+        ? actualCard.querySelector(".choice.like")
+        : actualCard.querySelector(".choice.nope");
+
+      choiceEl.style.opacity = opacity;
+    }
+
+    function onEnd(event) {
+      // remove the event listeners
+      document.removeEventListener("mousemove", onMove);
+      document.removeEventListener("mouseup", onEnd);
+
+      document.removeEventListener("touchmove", onMove);
+      document.removeEventListener("touchend", onEnd);
+
+      // saber si el usuario tomo una decisión
+      const decisionMade = Math.abs(pullDeltaX) >= DECISION_THRESHOLD;
+
+      if (decisionMade) {
+        const goRight = pullDeltaX >= 0;
+        const goLeft = !goRight;
+
+        // add class according to the decision
+        actualCard.classList.add(goRight ? "go-right" : "go-left");
+        actualCard.addEventListener("transitionend", () => {
+          actualCard.remove();
+        });
+      } else {
+        actualCard.classList.add("reset");
+        actualCard.classList.remove("go-right", "go-left");
+
+        actualCard.querySelectorAll(".choice").forEach((choice) => {
+          choice.style.opacity = 0;
+        });
+      }
+
+      // reset the variables
+      actualCard.addEventListener("transitionend", () => {
+        actualCard.removeAttribute("style");
+        actualCard.classList.remove("reset");
+
+        pullDeltaX = 0;
+        isAnimating = false;
+      });
+
+      // reset the choice info opacity
+      actualCard
+        .querySelectorAll(".choice")
+        .forEach((el) => (el.style.opacity = 0));
+    }
+  }
 
   document.addEventListener("mousedown", startDrag);
   document.addEventListener("touchstart", startDrag, { passive: true });
